--- a/portfolio/src/assets/main.css
+++ b/portfolio/src/assets/main.css
@@ -1,10 +1,15 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+}
+
+main {
+  margin: 2rem 0rem;
+  width: 100%;
 }
 
 a,
@@ -29,7 +34,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     padding: 0 2rem;
   }
 }
